# dependabot-demo

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_smoke_test.py
