[tool.poetry]
name = "dependabot-demo"
version = "0.1.0"
description = "A demo repo to test and demo GitHub auto-merging dependabot PRs when tests pass."
authors = ["David Tan <davidtan@thoughtworks.com>"]
packages = [{include = "dependabot_demo", from = "src"}]

[tool.poetry.dependencies]
pandas = "2.2.2"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"